--- a/src/styles.css
+++ b/src/styles.css
@@ -61,8 +61,10 @@
 }
 
 .PrefectureList {
-  margin: 24px 0 0 0;
-  display: flex;
+  /*   margin: 24px 0 0 0;
+ */
+  display: block;
+  float: left;
   flex-wrap: wrap;
   max-width: 1200px;
   min-height: 300px;
@@ -76,7 +78,8 @@
 
 .PrefectureCard {
   max-width: 1200px;
-  display: flex;
+  display: block;
+  float: left;
   flex-wrap: wrap;
   position: relative;
   padding-left: 28px;
@@ -85,7 +88,8 @@
   box-sizing: border-box;
   max-width: 1200px;
   flex-direction: column;
-  cursor: pointer;
+  /*   cursor: pointer;
+ */
   margin: 20px;
 }
 
